1. Updated body type filters and the “transform filter data” helper to ensure consistent functionality across the website (e.g: body-type to bodytype). 2. Reduced spacing between the active tab indicator and the text for improved alignment. 3. Implemented a function to parse and render description content with full formatting instead of plain text. 4. Refined the Popular Brands component by adjusting the border radius and adding animations to both filter cards for an enhanced user experience.

--- a/src/app-layouts/navbar/layouts/navbar-one/css/base.module.css
+++ b/src/app-layouts/navbar/layouts/navbar-one/css/base.module.css
@@ -98,7 +98,7 @@
 }
 
 .navbar-link {
-  @apply text-sm md:text-base py-2 md:py-4 border-t-2 border-transparent 
+  @apply text-sm md:text-base py-2 border-t-2 border-transparent 
          transition-colors duration-150 hover:text-primary hover:border-primary;
 }
 
