--- a/src/components/filter-card/variants/css/modern.module.css
+++ b/src/components/filter-card/variants/css/modern.module.css
@@ -4,27 +4,29 @@
 
 .filter-card {
   @apply relative rounded-2xl overflow-hidden 
-         w-full h-full
-         transition-all duration-300;
+         w-full h-full transition-all duration-300 brightness-95 hover:brightness-110;
 }
 
 .filter-card img {
   @apply w-full h-50 md:h-full object-cover rounded-2xl
-         transition-transform duration-500 ease-in-out 
-         group-hover:scale-110 group-hover:brightness-90;
+         transition-transform duration-500 ease-in-out;
 }
 
-/* .filter-card::before {
-  content: "";
-  @apply absolute inset-0 bg-linear-to-t 
-         from-black/60 via-black/25 to-transparent 
-         pointer-events-none;
-} */
+.filter-card:hover img {
+  @apply scale-95;
+}
 
 .filter-card-title {
   @apply absolute top-3 left-3 text-white 
          text-sm font-semibold 
          bg-black/50 backdrop-blur-sm px-3 py-1.5 rounded-md 
-         transition-all duration-300 ease-in-out 
-         group-hover:bg-black/70;
+         transition-all duration-300 ease-in-out;
+}
+
+.filter-card:hover .filter-card-title  {
+  @apply top-1.5 left-1.5 rounded-tl-2xl;
+}
+
+.filter-card:hover .filter-card-title {
+  @apply bg-primary/75 text-white;
 }
