--- a/src/components/filter-card/variants/css/simple.module.css
+++ b/src/components/filter-card/variants/css/simple.module.css
@@ -4,35 +4,31 @@
 
 .filter-card {
   @apply bg-white border border-gray-200 
-         rounded-lg w-full h-50 flex flex-col items-center 
+         rounded-2xl w-full h-50 flex flex-col items-center 
          justify-center cursor-pointer 
-         transition-all duration-200;
-}
-
-.filter-card:hover {
-  border-color: var(--color-primary);
-  color: var(--color-primary);
+         transition-all duration-300 hover:border-primary hover:scale-95;
 }
 
 /* ===== Image Type ===== */
 .filter-card img {
-  @apply size-36 object-contain;
+  @apply size-36 object-contain transition-all duration-300;
+}
+
+.filter-card:hover img {
+  @apply size-34;
 }
 
 /* ===== Icon Type Wrapper ===== */
 .filter-card-icon {
   @apply h-14 w-14 rounded-full mb-4 
-         flex items-center justify-center 
-         transition-colors duration-200;
-}
-
-.filter-card:hover .filter-card-icon {
-  background-color: var(--color-primary);
-  color: white;
+         flex items-center justify-center;
 }
 
 /* ===== Card Label / Title ===== */
 .filter-card-title {
-  @apply text-sm font-semibold;
-  color: var(--text-font-basic-color);
+  @apply text-sm font-semibold text-basicFont transition-all duration-300;
+}
+
+.filter-card:hover .filter-card-title {
+  @apply text-primary text-lg;
 }
